serving/springboot/longprocessapp/src/main/openshift/ksvc.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  annotations:
    app.openshift.io/route-disabled: "true"
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"longprocessapp:latest","namespace":"cathay-pacific-demo"},"fieldPath":"spec.template.spec.containers[?(@.name==\"longprocessapp\")].image","paused":"false"}]'
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"serving.knative.dev/v1","kind":"Service","metadata":{"annotations":{"app.openshift.io/route-disabled":"true","image.openshift.io/triggers":"[{\"from\":{\"kind\":\"ImageStreamTag\",\"name\":\"longprocessapp:latest\",\"namespace\":\"cathay-pacific-demo\"},\"fieldPath\":\"spec.template.spec.containers[?(@.name==\\\"longprocessapp\\\")].image\",\"paused\":\"false\"}]","openshift.io/generated-by":"OpenShiftWebConsole","serving.knative.dev/creator":"admin","serving.knative.dev/las [...]
    openshift.io/generated-by: OpenShiftWebConsole
    serving.knative.dev/creator: admin
    serving.knative.dev/lastModifier: admin
  creationTimestamp: "2024-10-10T12:27:08Z"
  generation: 4
  labels:
    app.kubernetes.io/component: longprocessapp
    app.kubernetes.io/instance: longprocessapp
    app.kubernetes.io/name: longprocessapp
    app.kubernetes.io/part-of: longprocessapp
    app.openshift.io/runtime: longprocessapp
    app.openshift.io/runtime-namespace: cathay-pacific-demo
    app.openshift.io/runtime-version: latest
    networking.knative.dev/visibility: cluster-local
  name: longprocessapp
  namespace: cathay-pacific-demo
  resourceVersion: "2073234"
  uid: 5130c069-e005-4d77-b83f-f7668c1c0f61
spec:
  template:
    metadata:
      annotations:
        autoscaling.knative.dev/target: "100"
        autoscaling.knative.dev/target-utilization-percentage: "70"
        autoscaling.knative.dev/window: 60s
        client.knative.dev/updateTimestamp: "2024-10-12T13:12:03Z"
      creationTimestamp: null
      labels:
        app.kubernetes.io/component: longprocessapp
        app.kubernetes.io/instance: longprocessapp
        app.kubernetes.io/part-of: longprocessapp
        app.openshift.io/runtime: longprocessapp
        app.openshift.io/runtime-namespace: cathay-pacific-demo
        app.openshift.io/runtime-version: latest
    spec:
      containerConcurrency: 0
      containers:
      - env:
        - name: slack_token
          valueFrom:
            secretKeyRef:
              key: token
              name: slack-token
        - name: TZ
          value: Asia/Shanghai
        - name: keepalive_url
          value: http://longprocessapp.cathay-pacific-demo.svc.cluster.local/actuator/health
        image: quay.io/rzhang/longprocessapp:v1.5
        imagePullPolicy: Always
        name: longprocessapp
        ports:
        - containerPort: 8080
          protocol: TCP
        readinessProbe:
          successThreshold: 1
          tcpSocket:
            port: 0
        resources: {}
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          runAsNonRoot: true
          seccompProfile:
            type: RuntimeDefault
        volumeMounts:
        - mountPath: /app/config
          name: app-config
          readOnly: true
      enableServiceLinks: false
      timeoutSeconds: 300
      volumes:
      - configMap:
          name: longprocessapp-app-config
        name: app-config
  traffic:
  - latestRevision: true
    percent: 100
status:
  address:
    url: http://longprocessapp.cathay-pacific-demo.svc.cluster.local
  conditions:
  - lastTransitionTime: "2024-10-12T13:12:35Z"
    status: "True"
    type: ConfigurationsReady
  - lastTransitionTime: "2024-10-12T13:12:35Z"
    status: "True"
    type: Ready
  - lastTransitionTime: "2024-10-12T13:12:35Z"
    status: "True"
    type: RoutesReady
  latestCreatedRevisionName: longprocessapp-00004
  latestReadyRevisionName: longprocessapp-00004
  observedGeneration: 4
  traffic:
  - latestRevision: true
    percent: 100
    revisionName: longprocessapp-00004
  url: http://longprocessapp.cathay-pacific-demo.svc.cluster.local
